# Setex-3-Fable-Replit

./: .env.example  .gitignore  .replit  PROMPT_CLAUDE_CODE.md  README.md  build.sh  run.sh
backend/: alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/src/: main.py
backend/src/companies/: models.py  router.py
backend/src/identity/: models.py  router.py
backend/src/invoice_intake/: models.py  router.py  storage.py
backend/src/jobs/: ocr_worker.py  queue.py
backend/src/notifications/: emails.py
backend/src/ocr/: arbiter.py  models.py  schema.py  verification.py
backend/src/ocr/counterparty/: chain.py  outcome.py
backend/src/ocr/counterparty/resolvers/: aeat.py  base.py  vies.py
backend/src/ocr/engines/: azure_docintel.py  base.py  mistral.py  parsing.py  pdf_native.py
backend/src/platform_admin/: health.py  router.py
backend/src/reporting/: router.py
backend/src/security/: audit.py  auth.py  models.py  rate_limit.py  rbac.py
backend/src/shared/: bootstrap.py  config.py  db.py  events.py  exceptions.py  logging.py  middleware.py  uuid7.py
backend/src/tenancy/: middleware.py  models.py  router.py
backend/tests/: conftest.py  test_arbiter.py  test_counterparty_chain.py  test_edit_tax_lines.py  test_parsing.py  test_tenant_isolation.py  test_verification.py
docs/adr/: 0012-adaptacion-modo-replit.md
docs/runbooks/: replit-deploy.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
scripts/: import_companies.py  reset_password.py  seed.py  set_custom_domain.py
(+13 files in other folders)
