[project]
name = "autoken-facturas"
version = "2.0.0"
description = "Plataforma SaaS multi-asesoria de digitalizacion de facturas con OCR/IA"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic[email]>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "structlog>=24.1",
  "argon2-cffi>=23.1",
  "pyjwt>=2.9",
  "pyotp>=2.9",
  "httpx>=0.27",
  "openpyxl>=3.1",
  "pdfplumber>=0.11",
  "python-multipart>=0.0.9",
  "greenlet>=3.0",
]

[project.optional-dependencies]
prod = []
dev = ["pytest>=8.2", "pytest-asyncio>=0.23", "pytest-cov>=5.0", "mypy>=1.10", "ruff>=0.5"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["isolation: suite anti-cruce de tenants (gate de CI)"]

[tool.ruff]
line-length = 110
target-version = "py312"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
